--- a/index.html
+++ b/index.html
@@ -1,34 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Ping coming soon page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  We are launching soon!
-
-  Subscribe and get notified
-
-  Notify Me
-
-  &copy; Copyright Ping. All rights reserved.
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+        <link rel="stylesheet" href="./css/styles.css" />
+        <title>Ping coming soon page</title>
+        <script src="https://kit.fontawesome.com/8975879675.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <img src="./images/logo.svg" alt="Ping Logo" class="logo" />
+        <h1 class="title"><span class="title-light">We are launching </span>soon!</h1>
+        <p class="subtitle">Subscribe and get notified</p>
+        <form class="form" id="form" novalidate>
+            <input type="email" placeholder="Your email address..." class="form-email" />
+            <p class="form-error">Please provide a valid email address</p>
+            <button type="submit" class="form-submit">Notify Me</button>
+        </form>
+        <img
+            src="./images/illustration-dashboard.png"
+            alt="A Dashboard Illustration"
+            class="illustration"
+        />
+        <footer class="footer">
+            <div class="footer-brands">
+                <a href="#">
+                    <div class="brand-container">
+                        <i class="fa-brands fa-facebook-f fa-fw"></i>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="brand-container">
+                        <i class="fa-brands fa-twitter fa-fw"></i>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="brand-container">
+                        <i class="fa-brands fa-instagram fa-fw"></i>
+                    </div>
+                </a>
+            </div>
+            <p class="footer-copyright">&copy; Copyright Ping. All rights reserved.</p>
+        </footer>
+        <script src="./js/script.js"></script>
+    </body>
 </html>
+
