--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h1 class="title"><span class="title-light">We are launching </span>soon!</h1>
         <p class="subtitle">Subscribe and get notified</p>
         <form class="form" id="form" novalidate>
-            <input type="email" placeholder="Your email address..." class="form-email" />
-            <p class="form-error">Please provide a valid email address</p>
+            <input type="email" placeholder="Your email address..." class="form-email" id="email" />
+            <p class="form-error hidden" id="emailError">Please provide a valid email address</p>
             <button type="submit" class="form-submit">Notify Me</button>
         </form>
         <img
