improving the illustration

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
             <p class="form-error hidden" id="emailError">Please provide a valid email address</p>
             <button type="submit" class="form-submit">Notify Me</button>
         </form>
-        <img
-            src="./images/illustration-dashboard.png"
-            alt="A Dashboard Illustration"
-            class="illustration"
-        />
+        <figure>
+            <img
+                src="./images/illustration-dashboard.png"
+                alt="A Dashboard Illustration"
+                class="illustration"
+            />
+        </figure>
         <footer class="footer">
             <div class="footer-brands">
                 <a href="#">
